Adding some padding to the heading

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -157,6 +157,7 @@ body {
       grid-row: 1 / 2;
       grid-column: 1 / 4;
       color: $primary-dark-color;
+      padding-right: 9em;
       p {
         margin-top: 14rem;
       }
